# procedural-frozenlake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: changelog.mdc  docs-code-sync.mdc  no-backward-compat.mdc  python-venv.mdc
.github/workflows/: ci.yml  publish.yml
examples/: random_rollout.ipynb  rollout.ipynb
scripts/: generate_icons.sh  generate_legend_tiles.sh  generate_tile_icons.py  generate_tile_icons.sh  install.sh  tile_icon_pixels.py
src/procedural_frozenlake/: __init__.py  env.py  mapgen.py  tile_icons.py  tiles.py  utils.py  value_iteration.py
tests/: test_env.py
