[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procedural-frozenlake"
version = "1.0.0"
description = "Procedural Frozen Lake — a Gymnasium environment with generated maps"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/micahr234/procedural-frozenlake"
Repository = "https://github.com/micahr234/procedural-frozenlake"
Issues = "https://github.com/micahr234/procedural-frozenlake/issues"

[project.optional-dependencies]
examples = [
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "gymnasium[toy-text]>=1.3.0",
]
dev = [
    "procedural-frozenlake[examples]",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
procedural_frozenlake = ["py.typed", "img/*.png"]

[tool.setuptools]
packages = ["procedural_frozenlake"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv]
environments = ["sys_platform == 'linux'"]
